--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A basic authentication system",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,14 +20,17 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "install": "^0.13.0",
     "mongoose": "^5.9.20",
     "node-sass-middleware": "^0.11.0",
+    "npm": "^6.14.5",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
   }
 }
