add reset password links

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,9 @@
-CLIENT_ID = ****************GOOGLE CLIENT ID**********************
-CLIENT_SECRET = ****************GOOGLE CLIENT SECRET**********************
+********************** Used for Google Auth *****************************
+
+CLIENT_ID = ////////GOOGLE CLIENT ID////////
+CLIENT_SECRET = ////////GOOGLE CLIENT SECRET////////
+
+********************** Used for Mailers, Mails to be sent from *****************************
+
+EMAIL = //////// MAIL@EXAMPLE.COM ////////
+PASSWORD = //////// PASS ////////
